fix: increase font weight to improve readability

--- a/assets/scss/pages/blog-single.scss
+++ b/assets/scss/pages/blog-single.scss
@@ -42,7 +42,7 @@
         }
 
         p, ul, ol, li {
-            font-weight: 200 !important;
+            font-weight: 300 !important;
             letter-spacing: 0.02rem;
             line-height: 32px;
             font-size: 18px;
